Agregando y corrigiendo los archivos

--- a/Bloque3/03.-gestion_secretos.yml
+++ b/Bloque3/03.-gestion_secretos.yml
@@ -38,3 +38,10 @@ ansible-navigator run -m stdout  \
 
 ansible-navigator run -m stdout site.yml \
 > --vault-password-file=vault-pw-file
+
+
+# EJECUTAR UN PLAYBOOK ENCRYPTADO MEDIANTE EL COMANDO ansible-playbook PROPORCIONANDO LA CONTRASEÑA MEDIANTE EL PROMPT
+sudo ansible-playbook -i hosts create_user.yml --vault-id @prompt
+
+# EJECUTAR UN PLAYBOOK ENCRYPTADO MEDIANTE EL COMANDO ansible-playbook PROPORCIONANDO LA CONTRASEÑA MEDIANTE UN ARCHIVO
+sudo ansible-playbook -i hosts create_user.yml --vault-password-file=vault-pass
